@@ -1,3 +1,9 @@
+2002-07-23  Mo DeJong  <mdejong@users.sourceforge.net>
+
+	* unix/tcl.m4 (SC_PATH_X): Set XINCLUDES to "" instead
+	of "# no special path needed" or "# no include files found"
+	when x headers cannot be located.
+
 2002-07-22  Vince Darley  <vincentdarley@users.sourceforge.net>
 
 	* generic/tclIOUtil.c: made tclNativeFilesystem static
